--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>Charts</title>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="pieChart.js">  </script>
+  <script src="app.js"></script>
 </head>
 <body>
-
+  <div id="pie-chart"></div>
 </body>
 </html>
