--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
   <script src="pieChart.js">  </script>
   <script src="app.js"></script>
+  <script src="columnChart.js"></script>
 </head>
 <body>
   <div id="pie-chart"></div>
+  <br>
+  <div id="column-chart"></div>
 </body>
 </html>
