refactored to move chartdetails into its own class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="pieChart.js">  </script>
   <script src="app.js"></script>
   <script src="columnChart.js"></script>
+  <script src="chartDetails.js"></script>
 </head>
 <body>
   <div id="pie-chart"></div>
