started sunburst chart

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <div id="pie-chart"></div>
   <br>
   <div id="column-chart"></div>
+  <br>
+  <div id="countries-chart"></div>
 </body>
 </html>
