--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="app.js"></script>
   <script src="columnChart.js"></script>
   <script src="chartDetails.js"></script>
+  <script src="sunBurstChart.js"></script>
 </head>
 <body>
   <div id="pie-chart"></div>
