--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <title>Charts</title>
   <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/sunburst.js"></script>
+  <link rel="stylesheet" type="text/css" href="main.css">
   <script src="pieChart.js">  </script>
   <script src="app.js"></script>
   <script src="columnChart.js"></script>
   <script src="chartDetails.js"></script>
+  <script src="countriesDetails.js"></script>
   <script src="sunBurstChart.js"></script>
 </head>
 <body>
